--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
+		
+		<style>
+			body{
+				background-color: black;
+			}
+		</style>
 	</head>
 	<body>
 		<header>
