--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
-		
-		<style>
-			body{
-				background-color: white;
-			}
-		</style>
+	<style>
+	body{
+		background-color: white;
+	}
+	</style>
 	</head>
 	<body>
 		<header>
@@ -22,6 +21,7 @@
 		    </section>
 	    <footer>
 		    Maybe has meanings?
+		    (Please watch in processing for complete annimation.)
 	    </footer>
 	</body>
 </html>
